--- a/studyingstatus/templates/studyingstatus/base.html
+++ b/studyingstatus/templates/studyingstatus/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'studyingstatus/style.css' %}">
+    <link rel="stylesheet" href="{% static 'studyingstatus/style.css' %}" type="text/css">
     <title>{% block title %}Riverdale Institute{% endblock %}</title>
 </head>
 <body>
